# platform-backend

./: .env.example  .env.prod.example  .gitignore  .gitleaksignore  CONTRIBUTING.md  README.md  dev-integration.sh  docker-compose.prod.yml  docker-compose.yml  pom.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/scripts/: check_reporting_allowlist_drift.py
.github/workflows/: audit-retention-worker-image.yml  ci-image-push.yml  ci-mvn-check.yml  ci.yml  contract-gate.yml  etl-worker-image.yml  gate-drift-authz-relation-alignment.yml  gate-osv-scan.yml  release-canary.yml  reporting-allowlist-drift.yml
.github/workflows-legacy/: i18n-a11y-smoke.yml  security-guardrails.yml
api-gateway/: Dockerfile  pom.xml
audio-gateway-service/: Dockerfile  README.md  pom.xml
audio-gateway-service/docs/: contract-v1.md  faz24-184-websocket-live-stream.md  faz24-issue-231-execution-report.md
audit-event-consumer-service/: Dockerfile  pom.xml
audit-retention-worker/: Dockerfile  pom.xml
auth-service/: Dockerfile  pom.xml
backend/openfga/: init.sh  model.fga  render_model_json.py
common-auth/: pom.xml
common-export/: pom.xml
common-meeting-events/: pom.xml
core-data-service/: Dockerfile  pom.xml
devops/postgres/: 00-create-keycloak-db.sql  02-rls-policies.sql  03-rls-phase1-entities.sql  04-rls-phase1-companies.sql  05-rls-phase1-variant-visibility.sql
devops/rehearsal/: docker-compose.app-level-schema.yml
devops/vault/: prod-unseal-loop.sh  vault-init-audit.sh  vault-raft-snapshot.sh  vault-seal-awskms.hcl  vault-seal-azurekeyvault.hcl  vault-seal-disabled.hcl  vault-seal-gcpckms.hcl  vault-seal-transit.hcl  vault.hcl
discovery-server/: Dockerfile  pom.xml
docs/: faz24-retention-cleanup-jobs.md
docs/adr/: 0006-report-contract-gate.md  0014-audit-module-gating.md  0015-report-execution-adapter.md
docs/plans/: 2026-05-reporting-phase-2-program-1-report-contract-gate-spec.md  2026-05-reporting-phase-2-program-2-runtime-tenant-guard-spec.md  2026-05-reporting-phase-2-program-8-schema-truth-integration-spec.md  2026-05-reporting-platform-hardening.md  2026-05-reporting-pr-0.4-pivot-weighted-avg-spec.md
docs/runbooks/: RB-d10-acceptance-evidence-map.md  RB-d10-live-pilot-readiness.md  RB-impersonation-live-smoke.md  RB-kc-subject-backfill.md
docs/spikes/: 2026-05-impersonation-token-exchange-spike.md
endpoint-admin-service/: Dockerfile  pom.xml
endpoint-admin-service/docs/: faz22.6-device-key-session-attestation-design.md  remote-bridge-wire-contract.md  remote-view-tenant-policy-runtime.md
ethics-service/: Dockerfile  pom.xml
etl-worker/: README.md  pyproject.toml
etl-worker/etl_worker/: __init__.py  audit.py  checkpoint.py  cli.py  config.py  contracts.py  db.py  pg_writer.py  retry.py  runner.py  schema_service_client.py
etl-worker/tests/: test_audit.py  test_cli.py  test_cli_run.py  test_config.py  test_pg_writer.py  test_retry.py  test_runner.py  test_schema_service_client.py
gp-core-service/: pom.xml
meeting-service/: Dockerfile  pom.xml
notification-orchestrator/: Dockerfile  pom.xml
openfga/: model.fga  tuples-seed.json
permission-service/: Dockerfile  pom.xml
report-service/: Dockerfile  pom.xml
schema-service/: Dockerfile  pom.xml
scripts/: doctor-infra.sh  doctor-zanzibar.sh  package.json  service-manager-api.js  verify-service-jwt-env.sh
transcript-service/: Dockerfile  pom.xml
user-service/: Dockerfile  pom.xml
variant-service/: Dockerfile  pom.xml
(+2543 files in other folders)
